Header first version

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+/* ------------------------------------------------- */
+/* BASIC SETUP */
+/* ------------------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,10 +16,71 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+/* ------------------------------------------------- */
+/* REUSABLE COMPS */
+/* ------------------------------------------------- */
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+/* -------HEADINGS------- */
+
+
+h1 {
+    margin: 0;
+    font-weight: 200;
+    color: #fff;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+    margin-bottom: 15px;
+}
+
+/* -------BUTTONS------- */
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    padding: 10px 30px;
+    text-decoration: none;
+    font-weight: 300;
+    border-radius: 200px;
+    transition: 0.2s;
+}
+
+.btn-full:link,
+.btn-full:visited {
+    background-color: #27ae60;
+    border: 2px solid #27ae60;
+    color: white;
+    margin-right: 15px;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited {
+    border: 2px solid #27ae60;
+    color: #27ae60;
+
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #1b7741;
+    border: 2px solid #1b7741;
+}
+
+
+.btn-ghost:hover,
+.btn-ghost:active {
+    color: #fff;
+}
+
+/* ------------------------------------------------- */
+/* HEADER */
+/* ------------------------------------------------- */
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)), url(img/hero.jpg);
@@ -24,16 +89,44 @@ header {
     height: 100vh;
 }
 
-h1 {
-    margin: 0;
-    font-family: 'Playfair', serif;
-    font-weight: 400;
-}
-
 .hero-text-box {
     position: absolute;
     width: 1140px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    filter: invert();
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 40px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-size: .8rem;
+    transition: 0.2s;
+    border-bottom: 2px solid transparent;
+    padding: 5px 0px;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #27ae60;
 }
