--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,7 +119,8 @@ h2::after {
 /* -------BUTTONS------- */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     text-decoration: none;
@@ -129,7 +130,8 @@ h2::after {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #27ae60;
     border: 2px solid #27ae60;
     color: white;
@@ -144,7 +146,9 @@ h2::after {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #1b7741;
     border: 2px solid #1b7741;
 }
@@ -431,3 +435,33 @@ cite img {
     text-align: center;
 }
 
+/* ------------------------------------------------- */
+/* CONTACT FORM */
+/* ------------------------------------------------- */
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {
+    outline: none;
+}
