--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,21 +45,21 @@ section {
 }
 
 .box p {
-    font-size: .9rem;
-    line-height: 1.45rem;
+    font-size: 90%;
+    line-height: 145%;
 }
 
 /* ------- ICONS ------- */
 
 .icon-big {
-    font-size: 3.5rem;
+    font-size: 350%;
     display: block;
     color: #27ae60;
     margin-bottom: 10px;
 }
 
 .icon-small {
-    font-size: 1.5rem;
+    font-size: 150%;
     color: #27ae60;
     margin-bottom: 10px;
     margin-right: 10px;
@@ -80,19 +80,19 @@ h1 {
     margin: 0;
     margin-bottom: 15px;
     color: #fff;
-    font-size: 2.4rem;
+    font-size: 240%;
     word-spacing: 3px;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 200%;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
 }
 
 h3 {
-    font-size: 1.1rem;
+    font-size: 110%;
     word-spacing: 2px;
     letter-spacing: unset;
     text-align: center;
@@ -101,7 +101,7 @@ h3 {
 
 /* ------- PARAGRAPHS ------- */
 .long-copy {
-    line-height: 1.45rem;
+    line-height: 145%;
     width: 70%;
     margin-left: 15%;
 }
@@ -204,7 +204,7 @@ header {
     text-decoration: none;
     color: white;
     text-transform: uppercase;
-    font-size: .8rem;
+    font-size: 80%;
     transition: 0.2s;
     border-bottom: 2px solid transparent;
     padding: 5px 0px;
@@ -244,7 +244,6 @@ header {
 .meal-photo {
     width: 100%;
     margin: 0;
-    height: 200px;
     transform: scale(1.15);
     transition: 0.5s;
     opacity: .6;
@@ -342,6 +341,10 @@ header {
     padding-bottom: 1px;
     border-bottom: 2px solid transparent;
     transition: 0.2s;
+}
+
+.city-feature div {
+    display: inline;
 }
 
 .city-feature a:hover {
