--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -579,3 +579,20 @@ footer p {
     margin-top: 70px;
     font-size: 90%;
 }
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-1.animate__animated,
+.js--wp-2.animate__animated,
+.js--wp-3.animate__animated {
+    opacity: 1;
+}
+
+.js--wp-4 {
+    animation-duration: 1s;
+}
