--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -22,9 +22,12 @@
 /* Small phones to small tablets */
 @media only screen and (max-width: 767px) {
     nav .row { text-align: center; }
-    .logo { float: none; }
-    .main-nav { float: none; }
-    .main-nav li:first-child { margin-left: 0px; }
+    .main-nav { 
+        display: none;
+        float: none; 
+        margin-top: 25px;
+        margin-left: 25px;
+    }
     .app-screen { width: 100%; }
     .works-step { margin-bottom: 30px ;}
     .works-step:last-of-type { margin-bottom: 50px ;}
@@ -32,6 +35,23 @@
     .plan-box div { font-size: 80%; }
     .city-feature { text-align: center; }
     .contact-form { width: 100%; }
+    .mobile-nav-icon { 
+        display: inline-block; 
+        margin-top: 15px;
+    }
+    .main-nav li { 
+        display: block; 
+        text-align: left;
+        margin-left: 150px;
+    }
+    .main-nav li a {
+        display: block;
+        border: 0;
+        font-size: 100%;
+    }
+    .sticky .mobile-nav-icon i {
+        color: #555;
+    }
 }
 
 
